Using Double.valueOf instead of Double constructor